# travel-hotels

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint-test-security.yml
docs/: api.md  deployment.md  environment.md
src/: main.py
src/api/: __init__.py  hotels.py
src/api/dependencies/: controllers.py
src/app/controllers/: __init__.py  factory.py  hotel_controller.py
src/app/schemas/: __init__.py  hotel_search.py
src/app/services/: factory.py  hotel_service.py
src/app/services/searchapi/: client.py  exceptions.py
src/core/: __init__.py  config.py
src/core/persistence/: factory.py  searchapi_client.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unittests/app/schemas/: __init__.py  test_hotel_search.py
tests/unittests/app/services/: test_factory.py  test_hotel_service.py
tests/unittests/app/services/searchapi/: test_searchapi_client.py
tests/unittests/core/: test_config.py
tests/untittests/app/: __init__.py
tests/untittests/app/schemas/: test_hotel_search.py
tests/untittests/app/services/: test_factory.py  test_hotel_service.py
tests/untittests/core/: test_config.py
tests/untittests/core/persistence/: test_factory.py  test_searchapi_client.py
tests/utils/: decorators.py
